# Unspiral

./: .gitignore  README.md  pyproject.toml
scripts/: analyze_logs.py
tests/: test_belief_tracker.py  test_circuit_breaker.py  test_drift_monitor.py  test_lqcd.py
unspiral/: __init__.py
unspiral/cli/: app.py  dashboard.py
unspiral/detectors/: agreement_classifier.py  lqcd_probe.py  stance_test.py
unspiral/interventions/: circuit_breaker.py  counter_generator.py
unspiral/logging/: conversation_log.py
unspiral/models/: embeddings.py
unspiral/tracking/: belief_tracker.py  drift_monitor.py
