[project]
name = "unspiral"
version = "0.1.0"
description = "ML-powered anti-sycophancy framework for LLM chatbots"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "rich>=13.0",
    "sentence-transformers>=2.2",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
unspiral = "unspiral.cli.app:main"

[tool.setuptools.packages.find]
include = ["unspiral*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
